# ai-agent-practice

./: .gitignore  README.md
app/: docker-compose.yaml
app/backend/: Dockerfile  pyproject.toml
app/backend/agent/: manage.py
app/backend/agent/agent/: asgi.py  models.py  settings.py  urls.py  wsgi.py
app/backend/agent/chat/: service.py  urls.py  views.py
app/backend/agent/conversation/: apps.py  file_parser.py  models.py  serializers.py  service.py  urls.py  views.py
app/backend/agent/conversation/migrations/: 0001_initial.py  0002_conversation_ai_settings.py  0003_alter_message_content_conversationmessagefile.py
app/backend/agent/conversation/tests/: __init__.py  test_file_parser.py  test_service.py  test_views.py
app/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css
app/frontend/src/api/: chat.ts  conversations.ts  message.test.ts  message.ts
app/frontend/src/components/ChatView/: ChatView.module.css  ChatView.test.tsx  ChatView.tsx
app/frontend/src/components/Header/: Header.module.css  Header.test.tsx  Header.tsx
app/frontend/src/components/LandingPage/: LandingPage.module.css  LandingPage.test.tsx  LandingPage.tsx
app/frontend/src/lib/: fileStorage.test.ts  fileStorage.ts
langchain/: README.md  langchain.py  with_langchain.py  without_langchain.py
langchain/chain/: basic.py  multi_chain.py
langgraph/: README.md  langgraph_example.py  langgraph_stream.py
openai/: README.md  embedding.py  main.py  rag.py  similarity.py  vector_store_chroma.py
(+8 files in other folders)
