[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=2.30.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "agent.settings"
pythonpath = ["agent"]
